proj1/tests/error/raw_long_string_double_quote.py
r"""jfweofjwoeifjw"fewjfpw"pfjweoifjwoiefjwe""jfewofjwoeifjowiejfowijfoiwjfowijef
ifjweoifjowiejfwoiejfwe